# S1-SEE

./: .clang-format  .gitignore  ARCHITECTURE_FLOW.md  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_tests.sh
apps/: s1see_demo_generator.cc  s1see_processor.cc  s1see_spoolerd.cc
cmake/: ProtobufWorkaround.cmake
config/: config.yaml.example
config/rulesets/: mobility.yaml
examples/population_movement/: .gitignore  README.md  USAGE_GUIDE.md  aggregator.py  cell_site_db.py  generate_sample_events.py  journey_tracker.py  map_visualizer.py  population_movement_app.py  quick_start.sh
include/s1see/correlate/: correlator.h  ue_context.h
include/s1see/decode/: s1ap_decoder_wrapper.h
include/s1see/ingest/: amqp_adapter.h  grpc_adapter.h  ingest_adapter.h  kafka_adapter.h  nats_adapter.h
include/s1see/processor/: pipeline.h
include/s1see/rules/: rule_engine.h  yaml_loader.h
include/s1see/sinks/: jsonl_sink.h  sink.h  stdout_sink.h
include/s1see/spool/: spool.h  wal_log.h
proto/: canonical_message.proto  event.proto  ingest.proto  signal_message.proto  spool_record.proto
src/: nas_parser.cpp  nas_parser.h  s1ap_parser.cpp  s1ap_parser.h  s1ap_ue_correlator.cpp  s1ap_ue_correlator.h
src/correlate/: correlator.cc  ue_context.cc
src/decode/: s1ap_decoder_wrapper.cc
src/ingest/: amqp_adapter.cc  grpc_adapter.cc  ingest_adapter.cc  kafka_adapter.cc  nats_adapter.cc
src/processor/: pipeline.cc
src/rules/: rule_engine.cc  yaml_loader.cc
src/sinks/: jsonl_sink.cc  sink.cc  stdout_sink.cc
src/spool/: spool.cc  wal_log.cc
tests/: test_correlator.cc  test_integration.cc  test_pcap.cc  test_ue_context.cc
